--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,22 @@ import Card from '../components/Card.astro';
 
 <Layout title="Welcome to Astro.">
 	<main>
+
+    <script src="./WebGL/main.js"></script>
+
+    </head>
+    <body onload="init()">
+
+    <h2>A Cube with "Trackball" Mouse Rotation</h2>
+
+    <p id="message">Drag your mouse on the cube to rotate it.<br>
+    (On a touch screen, you can use your finger.)</p>
+
+
+    <div id="canvas-holder">
+       <canvas width="600" height="600" id="webglcanvas"></canvas>
+    </div>
+
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
