fix: use client side script to prevent build fail

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import FancyCanvas from '../components/FancyCanvas/FancyCanvas.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 
-    <script src="./WebGL/main.js"></script>
-
-    </head>
-    <body onload="init()">
-
-    <h2>A Cube with "Trackball" Mouse Rotation</h2>
-
-    <p id="message">Drag your mouse on the cube to rotate it.<br>
-    (On a touch screen, you can use your finger.)</p>
-
-
-    <div id="canvas-holder">
-       <canvas width="600" height="600" id="webglcanvas"></canvas>
-    </div>
+    <FancyCanvas />
 
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
