--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,7 +8,7 @@ export interface Props {
 const { href, title, body } = Astro.props;
 ---
 
-<li class="link-card">
+<li class="link-card hover:bg-sky-900">
   <a href={href}>
     <h2>
       {title}
@@ -19,6 +19,7 @@ const { href, title, body } = Astro.props;
     </p>
   </a>
 </li>
+
 <style>
   .link-card {
     list-style: none;
