--- a/src/pages/1-surface-rendering/SurfaceCanvas/SurfaceCanvas.astro
+++ b/src/pages/1-surface-rendering/SurfaceCanvas/SurfaceCanvas.astro
@@ -2,205 +2,108 @@
   import fragment from "./fragment.glsl";
   import vertex from "./vertex.glsl";
   import { TrackballRotator } from "../../../lib/trackball-rotator.js";
-  import { Matrix4, Vector3 } from "@math.gl/core";
+  import { Matrix4, Vector3, Vector4, toRadians } from "@math.gl/core";
+  import { Program, initCanvas, VertexData } from "../../../lib/webGL";
 
-  let gl; // The webgl context.
-  let surface; // A surface model
-  let shProgram; // A shader program
-  let spaceball; // A SimpleRotator object that lets the user rotate the view by mouse.
-
-  function deg2rad(angle) {
-    return (angle * Math.PI) / 180;
+  enum Uniforms {
+    ProjectionMatrix = "projection_matrix",
+    Color = "color",
   }
 
-  // Constructor
-  function Model(name) {
-    this.name = name;
-    this.iVertexBuffer = gl.createBuffer();
-    this.count = 0;
-
-    this.BufferData = function (vertices) {
-      gl.bindBuffer(gl.ARRAY_BUFFER, this.iVertexBuffer);
-      gl.bufferData(
-        gl.ARRAY_BUFFER,
-        new Float32Array(vertices),
-        gl.STREAM_DRAW
-      );
-
-      this.count = vertices.length / 3;
-    };
-
-    this.Draw = function () {
-      gl.bindBuffer(gl.ARRAY_BUFFER, this.iVertexBuffer);
-      gl.vertexAttribPointer(shProgram.iAttribVertex, 3, gl.FLOAT, false, 0, 0);
-      gl.enableVertexAttribArray(shProgram.iAttribVertex);
-
-      gl.drawArrays(gl.LINE_STRIP, 0, this.count);
-    };
+  enum Attributes {
+    Vertex = "vertex",
   }
 
-  // Constructor
-  function ShaderProgram(name, program) {
-    this.name = name;
-    this.prog = program;
+  function createVertices(): number[] {
+    let vertices: number[] = [];
+    const h = 1;
+    const p = 0.5;
 
-    // Location of the attribute variable in the shader program.
-    this.iAttribVertex = -1;
-    // Location of the uniform specifying a color for the primitive.
-    this.iColor = -1;
-    // Location of the uniform matrix representing the combined transformation.
-    this.iModelViewProjectionMatrix = -1;
+    for (let z = -h; z <= h; z += 0.1) {
+      for (let b = 0; b <= 360; b += 5) {
+        const x = ((Math.abs(z) - h) ** 2 / (2 * p)) * Math.cos(toRadians(b));
+        const y = ((Math.abs(z) - h) ** 2 / (2 * p)) * Math.sin(toRadians(b));
+        vertices.push(x, y, z);
+      }
+    }
 
-    this.Use = function () {
-      gl.useProgram(this.prog);
-    };
+    for (let b = 0; b <= 360; b += 20) {
+      for (let z = -h; z <= h; z += 0.1) {
+        const x = ((Math.abs(z) - h) ** 2 / (2 * p)) * Math.cos(toRadians(b));
+        const y = ((Math.abs(z) - h) ** 2 / (2 * p)) * Math.sin(toRadians(b));
+        vertices.push(x, y, z);
+      }
+    }
+
+    return vertices;
   }
 
-  /* Draws a colored cube, along with a set of coordinate axes.
-   * (Note that the use of the above drawPrimitive function is not an efficient
-   * way to draw with WebGL.  Here, the geometry is so simple that it doesn't matter.)
-   */
-  function draw() {
+  function draw(
+    gl: WebGLRenderingContext,
+    program: Program<Attributes, Uniforms>,
+    surface: VertexData,
+    rotator: TrackballRotator
+  ) {
+    gl.useProgram(program.getWebGLProgram());
     gl.clearColor(0, 0, 0, 1);
-    gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+    gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT); // removes black bg
 
-    /* Set the values of the projection transformation */
-    let projection = new Matrix4().perspective({
+    const projection = new Matrix4().perspective({
       fovy: Math.PI / 8,
       aspect: 1,
       near: 8,
       far: 12,
     });
-
-    /* Get the view matrix from the SimpleRotator object.*/
-    let modelView = spaceball.getViewMatrix();
-
-    let rotateToPointZero = new Matrix4().rotateAxis(0.7, [0.707, 0.707, 0]);
-    let translateToPointZero = new Matrix4().translate(new Vector3(0, 0, -10));
-
-    let matAccum0 = rotateToPointZero.multiplyRight(modelView);
-    let matAccum1 = translateToPointZero.multiplyRight(matAccum0);
-
-    /* Multiply the projection matrix times the modelview matrix to give the
-       combined transformation matrix, and send that to the shader program. */
-    let modelViewProjection = projection.multiplyRight(matAccum1);
-
-    gl.uniformMatrix4fv(
-      shProgram.iModelViewProjectionMatrix,
-      false,
-      modelViewProjection
+    const modelView = rotator.getViewMatrix();
+    const rotateToPointZero = new Matrix4().rotateAxis(
+      0.7,
+      new Vector3(0, 0, 0) // POV from top
     );
-
-    /* Draw the six faces of a cube, with different colors. */
-    gl.uniform4fv(shProgram.iColor, [1, 1, 0, 1]);
-
-    surface.Draw();
-  }
-
-  function CreateSurfaceData() {
-    let vertexList = [];
-
-    for (let i = 0; i < 360; i += 5) {
-      vertexList.push(Math.sin(deg2rad(i)), 1, Math.cos(deg2rad(i)));
-      vertexList.push(Math.sin(deg2rad(i)), 0, Math.cos(deg2rad(i)));
-    }
-
-    return vertexList;
-  }
-
-  /* Initialize the WebGL context. Called from init() */
-  function initGL() {
-    let prog = createProgram(gl, vertex, fragment);
-
-    shProgram = new ShaderProgram("Basic", prog);
-    shProgram.Use();
-
-    shProgram.iAttribVertex = gl.getAttribLocation(prog, "vertex");
-    shProgram.iModelViewProjectionMatrix = gl.getUniformLocation(
-      prog,
-      "ModelViewProjectionMatrix"
+    const translateToPointZero = new Matrix4().translate(
+      new Vector3(0, 0, -10)
     );
-    shProgram.iColor = gl.getUniformLocation(prog, "color");
+    const matAccum0 = rotateToPointZero.multiplyRight(modelView);
+    const matAccum1 = translateToPointZero.multiplyRight(matAccum0);
+    const modelViewProjection = projection.multiplyRight(matAccum1);
 
-    surface = new Model("Surface");
-    surface.BufferData(CreateSurfaceData());
+    program.setUniform(Uniforms.ProjectionMatrix, modelViewProjection);
+    program.setUniform(Uniforms.Color, new Vector4(1, 1, 0, 1));
 
-    gl.enable(gl.DEPTH_TEST);
+    gl.drawArrays(gl.LINE_STRIP, 0, surface.getCount());
   }
 
-  /* Creates a program for use in the WebGL context gl, and returns the
-   * identifier for that program.  If an error occurs while compiling or
-   * linking the program, an exception of type Error is thrown.  The error
-   * string contains the compilation or linking error.  If no error occurs,
-   * the program identifier is the return value of the function.
-   * The second and third parameters are strings that contain the
-   * source code for the vertex shader and for the fragment shader.
-   */
-  function createProgram(gl, vShader, fShader) {
-    let vsh = gl.createShader(gl.VERTEX_SHADER);
-    gl.shaderSource(vsh, vShader);
-    gl.compileShader(vsh);
-    if (!gl.getShaderParameter(vsh, gl.COMPILE_STATUS)) {
-      throw new Error("Error in vertex shader:  " + gl.getShaderInfoLog(vsh));
-    }
-    let fsh = gl.createShader(gl.FRAGMENT_SHADER);
-    gl.shaderSource(fsh, fShader);
-    gl.compileShader(fsh);
-    if (!gl.getShaderParameter(fsh, gl.COMPILE_STATUS)) {
-      throw new Error("Error in fragment shader:  " + gl.getShaderInfoLog(fsh));
-    }
-    let prog = gl.createProgram();
-    gl.attachShader(prog, vsh);
-    gl.attachShader(prog, fsh);
-    gl.linkProgram(prog);
-    if (!gl.getProgramParameter(prog, gl.LINK_STATUS)) {
-      throw new Error("Link error in program:  " + gl.getProgramInfoLog(prog));
-    }
-    return prog;
-  }
-
-  /**
-   * initialization function that will be called when the page has loaded
-   */
   function init() {
-    let canvas;
     try {
-      canvas = document.getElementById("webglcanvas");
-      gl = canvas.getContext("webgl");
-      if (!gl) {
-        throw "Browser does not support WebGL";
-      }
-    } catch (e) {
-      document.getElementById("canvas-holder").innerHTML =
-        "<p>Sorry, could not get a WebGL graphics context.</p>";
-      return;
-    }
-    try {
-      initGL(); // initialize the WebGL graphics context
-    } catch (e) {
-      document.getElementById("canvas-holder").innerHTML =
-        "<p>Sorry, could not initialize the WebGL graphics context: " +
-        e +
-        "</p>";
-      return;
-    }
+      const size = Math.min(600, window.innerWidth - 50);
+      const { gl, canvas } = initCanvas(size, size);
+      const program = new Program(
+        gl,
+        vertex,
+        fragment,
+        Object.values(Attributes),
+        Object.values(Uniforms)
+      );
+      const surface = new VertexData(createVertices(), 3);
+      program.setAttribute(
+        Attributes.Vertex,
+        surface.getData(),
+        surface.getSize()
+      );
+      const rotator = new TrackballRotator(canvas, null, 0);
+      rotator.setCallback(() => draw(gl, program, surface, rotator));
+      draw(gl, program, surface, rotator);
 
-    // @ts-ignore
-    spaceball = new TrackballRotator(canvas, draw, 0);
-
-    draw();
+      document.getElementById("canvas-root").appendChild(canvas);
+    } catch (e) {
+      return alert(e);
+    }
   }
 
-  document.body.onload = init;
+  init();
 </script>
 
-<h2>A Cube with "Trackball" Mouse Rotation</h2>
+<h2 class="text-center text-5xl font-bold text-slate-300 mb-10">
+  Parabolic Humming-Top
+</h2>
 
-<p id="message">
-  Drag your mouse on the cube to rotate it.<br />
-  (On a touch screen, you can use your finger.)
-</p>
-
-<div id="canvas-holder">
-  <canvas width="600" height="600" id="webglcanvas"></canvas>
-</div>
+<div id="canvas-root"></div>
