--- a/src/pages/1-surface-rendering/SurfaceCanvas/SurfaceCanvas.astro
+++ b/src/pages/1-surface-rendering/SurfaceCanvas/SurfaceCanvas.astro
@@ -44,7 +44,7 @@
     surface: VertexData,
     rotator: TrackballRotator
   ) {
-    gl.useProgram(program.getWebGLProgram());
+    program.use(gl.useProgram.bind(gl));
     gl.clearColor(0, 0, 0, 1);
     gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT); // removes black bg
 
