--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,11 @@ import Layout from "../components/Layout.astro";
         title="#1 Surface Rendering"
         body="Practical assignment #1 (Surface Rendering)"
       />
+      <Card
+        href="2-lighting/"
+        title="#2 Lighting"
+        body="Practical assignment #2 (Phong light)"
+      />
     </ul>
   </main>
 </Layout>
