CGW - texture coordinates (#3)
* chore: set up assignment 3

* feat: map texture into surface

* chore: update astro

* wip: try rotate

* chore: move tweakpane to left

* feat: scale and rotation around 0

* feat: upload report

* chore: add calculation and graphics work to readme

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,11 @@ import Layout from "../components/Layout.astro";
         title="#2 Lighting"
         body="Practical assignment #2 (Phong light)"
       />
+      <Card
+        href="3-texture/"
+        title="#3 Texture"
+        body="Practical assignment #3 (Texture mapping)"
+      />
     </ul>
   </main>
 </Layout>
