rebase upstream VGGI

--- a/src/pages/1-stereo-camera/SurfaceCanvas/SurfaceCanvas.astro
+++ b/src/pages/1-stereo-camera/SurfaceCanvas/SurfaceCanvas.astro
@@ -5,7 +5,7 @@
 </script>
 
 <h2 class="text-center text-5xl font-bold text-slate-300 mb-10">
-  Parabolic Humming-Top with Phong light
+  Parabolic Humming-Top
 </h2>
 
 <div id="canvas-root"></div>
