--- a/src/pages/1-stereo-camera/index.astro
+++ b/src/pages/1-stereo-camera/index.astro
@@ -3,7 +3,7 @@ import Layout from "../../components/Layout.astro";
 import SurfaceCanvas from "./SurfaceCanvas/SurfaceCanvas.astro";
 ---
 
-<Layout title="#2 Lighting">
+<Layout title="#1 Stereo Camera">
   <main>
     <SurfaceCanvas />
   </main>
