--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,19 +10,9 @@ import Layout from "../components/Layout.astro";
     </h1>
     <ul class="card-list-grid">
       <Card
-        href="1-surface-rendering/"
-        title="#1 Surface Rendering"
-        body="Practical assignment #1 (Surface Rendering)"
-      />
-      <Card
-        href="2-lighting/"
-        title="#2 Lighting"
-        body="Practical assignment #2 (Phong light)"
-      />
-      <Card
-        href="3-texture/"
-        title="#3 Texture"
-        body="Practical assignment #3 (Texture mapping)"
+        href="1-stereo-camera/"
+        title="#1 Stereo Camera"
+        body="Practical assignment #1 (WebGL stereo camera)"
       />
     </ul>
   </main>
