--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,10 @@ import Card from "../components/Card.astro";
 import Layout from "../components/Layout.astro";
 ---
 
-<Layout title="VGGI assignments">
+<Layout title="VR assignments">
   <main>
     <h1 class="text-center text-5xl font-bold text-slate-300 mb-10">
-      VGGI assignments
+      VR assignments
     </h1>
     <ul class="card-list-grid">
       <Card
