--- a/src/pages/1-stereo-camera/SurfaceCanvas/SurfaceCanvas.astro
+++ b/src/pages/1-stereo-camera/SurfaceCanvas/SurfaceCanvas.astro
@@ -4,8 +4,10 @@
   init(document.getElementById("canvas-root"));
 </script>
 
-<h2 class="text-center text-5xl font-bold text-slate-300 mb-10">
-  Parabolic Humming-Top
-</h2>
-
 <div id="canvas-root"></div>
+
+<style>
+  #canvas-root {
+    position: absolute;
+  }
+</style>
