--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
 <style is:global>
   html {
     font-family: system-ui, sans-serif;
-    background-color: #242729;
+    /* background-color: #242729; */
   }
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
