feat: add camera

--- a/src/pages/1-stereo-camera/SurfaceCanvas/SurfaceCanvas.astro
+++ b/src/pages/1-stereo-camera/SurfaceCanvas/SurfaceCanvas.astro
@@ -5,9 +5,15 @@
 </script>
 
 <div id="canvas-root"></div>
+<video src="" width="600" height="600"></video>
 
 <style>
   #canvas-root {
+    position: absolute;
+  }
+
+  video {
+    z-index: -1;
     position: absolute;
   }
 </style>
