--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -29,3 +29,20 @@ const { title } = Astro.props;
       DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
   }
 </style>
+
+<script>
+  if ("serviceWorker" in navigator) {
+    window.addEventListener("load", function() {
+      navigator.serviceWorker.register("/service-worker.js")
+        .then(function(registration) {
+          console.log("Service Worker registered with scope:", registration.scope);
+        })
+        .catch(function(error) {
+          console.log("Service Worker registration failed:", error);
+        });
+    });
+  } else {
+    console.error("service worker is not supported");
+  }
+</script>
+
