--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -34,6 +34,9 @@ const { title } = Astro.props;
   if ("serviceWorker" in navigator) {
     window.addEventListener("load", function() {
       navigator.serviceWorker.register("/service-worker.js")
+        .catch(() => {
+          return navigator.serviceWorker.register("/subject_ms-VR/subject_ms-VR");
+        })
         .then(function(registration) {
           console.log("Service Worker registered with scope:", registration.scope);
         })
