--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -35,7 +35,7 @@ const { title } = Astro.props;
     window.addEventListener("load", function() {
       navigator.serviceWorker.register("/service-worker.js")
         .catch(() => {
-          return navigator.serviceWorker.register("/subject_ms-VR/subject_ms-VR");
+          return navigator.serviceWorker.register("/subject_ms-VR/service-worker.js");
         })
         .then(function(registration) {
           console.log("Service Worker registered with scope:", registration.scope);
