--- a/src/pages/1-stereo-camera/SurfaceCanvas/SurfaceCanvas.astro
+++ b/src/pages/1-stereo-camera/SurfaceCanvas/SurfaceCanvas.astro
@@ -10,10 +10,6 @@
 <style>
   #canvas-root {
     position: absolute;
-  }
-
-  video {
-    z-index: -1;
-    position: absolute;
+    margin-top: 100px;
   }
 </style>
